--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,18 +3,20 @@ project:
   output-dir: docs
 
 website:
-  title: "evelyngreeves.github.io"
+  title: "Evelyn Greeves"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+      - portfolio.qmd
 
 format:
   html:
-    theme: cosmo
+    theme: minty
     css: styles.css
     toc: true
+    page-layout: full
 
 editor: visual
 
