Add logo and fiddle with navbar font size

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,8 @@ project:
 website:
   title: "Evelyn Greeves"
   navbar:
+    title: false
+    logo: images/eg_logo_nf.png
     right:
       - href: index.qmd
         text: Home
