--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,6 +4,7 @@ project:
 
 website:
   title: "Evelyn Greeves"
+  favicon: images/eg_favicon.png
   navbar:
     title: false
     logo: images/eg_logo_nf.png
